<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/steps_text"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:layout_marginEnd="84dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="Steps:"
        app:layout_constraintEnd_toStartOf="@+id/spinner_steps"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Spinner
        android:id="@+id/spinner_steps"
        android:layout_width="223dp"
        android:layout_height="36dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:entries="@array/Steps"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="75dp"
        android:text="Time:"
        app:layout_constraintEnd_toStartOf="@+id/spinner_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/steps_text" />

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="225dp"
        android:layout_height="36dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/border"
        android:entries="@array/Time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_steps" />

    <Switch
        android:id="@+id/switch_Run"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="224dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="224dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="Run"
        android:theme="@style/SwitchTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toEndOf="@+id/switch_Walk"
        app:layout_constraintTop_toBottomOf="@+id/img_Run" />

    <ImageView
        android:id="@+id/img_Run"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="144dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="92dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_Walk"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFor"
        app:srcCompat="@drawable/runner_stickman"
        tools:ignore="VectorDrawableCompat" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/setgoalbtn"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="92dp"
        android:text="Set Goal"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_Run"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="92dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="75dp"
        android:text="Period:"
        app:layout_constraintEnd_toStartOf="@+id/spinnerFor"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Time" />

    <Spinner
        android:id="@+id/spinnerFor"
        android:layout_width="225dp"
        android:layout_height="36dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/border"
        android:entries="@array/Period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_time" />

    <Switch
        android:id="@+id/switch_Walk"
        android:layout_width="79dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:text="Walk"
        android:theme="@style/SwitchTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_Walk" />

    <ImageView
        android:id="@+id/img_Walk"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="92dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_directions_walk_black_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="305dp"
        android:layout_height="65dp"
        android:layout_marginTop="16dp"
        android:text="Create Goal"
        android:gravity="center"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>








