<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView15"
        android:layout_width="310dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        android:text="Update Profile"
        android:textSize="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username_text"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginTop="48dp"
        android:text="Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:background="@drawable/border"
        android:hint="John_Doe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:background="@drawable/border"
        android:hint="example@gmail.com"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <TextView
        android:id="@+id/confirm_password_text"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginTop="32dp"
        android:text="Confirm Password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <EditText
        android:id="@+id/confirm_password_input"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_text" />

    <Button style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="Update!"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_input" />
</android.support.constraint.ConstraintLayout>